[package]
name = "live-qso-map"
version = "0.1.0"
edition = "2021"
authors = [
    "Luca Cireddu <sardylan@gmail.com>"
]
license-file = "LICENSE.md"

[dependencies]
actix-web = { version = "4.9.0", features = ["macros", "unicode"] }
actix-web-rust-embed-responder = { version = "2.2.3", features = ["rust-embed", "base64"] }
actix-ws = "0.3.0"
async-channel = "2.3.1"
async-broadcast = "0.7.1"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.20", features = ["cargo", "color", "derive", "env", "unicode"] }
lazy_static = "1.5.0"
log = "0.4.22"
log4rs = "1.3.0"
mime_guess = { version = "2.0.5", features = ["default"] }
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json"] }
rust-embed-for-web = "11.2.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = { version = "1.0.132", features = ["std"] }
serde-xml-rs = "0.6.0"
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["full"] }
