[package]
name = "live-qso-map"
version = "1.0.0"
edition = "2021"
authors = [
    "Luca Cireddu <sardylan@gmail.com>"
]
license-file = "LICENSE.md"

[dependencies]
actix-web = { version = "4.9.0", default-features = false, features = ["compress-brotli", "compress-gzip", "macros", "unicode"] }
actix-web-rust-embed-responder = { version = "2.2.3", features = ["rust-embed", "base64"] }
actix-ws = "0.3.0"
async-channel = "2.3.1"
async-broadcast = "0.7.1"
clap = { version = "4.5.21", features = ["cargo", "color", "derive", "env", "unicode"] }
log = "0.4.22"
log4rs = "1.3.0"
reqwest = { version = "0.12.9", features = ["json"] }
rust-embed-for-web = "11.2.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0.133", features = ["std"] }
serde-xml-rs = "0.6.0"
tokio = { version = "1.41.0", features = ["full"] }
